import("//build/templates/build_template.gni")

build_rust("flat_device_tree") {
  epoch = "3"
  crate_type = "rlib"
  sources = [ "//external/flat_device_tree/v3.1.1/src/lib.rs" ]
  inputs = []
  edition = "2021"

  rustflags = [
    "--cap-lints=allow",  # Suppress all warnings in crates.io crates
  ]
}
